// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/CriticalInjuriesSection default 1`] = `
.c2 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-column-gap: 12px;
  grid-row-gap: 6px;
  padding: 12px;
}

.c2 > h4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c2 > h4:first-child {
  color: rgb(242,143,34);
}

.c2 > h4 span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(81,42,124);
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 p {
  grid-column: 1/4;
  color: rgb(0,130,155);
  text-align: justify;
}

.c2 button {
  grid-column: 1/4;
}

.c0 {
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  background-color: rgba(65,178,180,0.1);
  padding: 12px;
  position: relative;
}

.c1 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c1 > form:not(:last-child) {
  margin-bottom: 12px;
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="criticalInjuries-section"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      data-testid="criticalInjury-minor_nick"
    >
      <h4
        data-testid="criticalInjury-minor_nick-dice_value"
      >
        01-05
      </h4>
      <h4
        data-testid="criticalInjury-minor_nick-name"
      >
        Minor Nick
      </h4>
      <h4
        data-testid="criticalInjury-minor_nick-severity"
      >
        <span>
          k
        </span>
      </h4>
      <p
        data-testid="criticalInjury-minor_nick-effects"
      >
        The target suffers 1 strain.
      </p>
    </div>
    <div
      class="c2"
      data-testid="criticalInjury-slightly_dazed"
    >
      <h4
        data-testid="criticalInjury-slightly_dazed-dice_value"
      >
        61-65
      </h4>
      <h4
        data-testid="criticalInjury-slightly_dazed-name"
      >
        Slightly Dazed
      </h4>
      <h4
        data-testid="criticalInjury-slightly_dazed-severity"
      >
        <span>
          k k
        </span>
      </h4>
      <p
        data-testid="criticalInjury-slightly_dazed-effects"
      >
        The target is disoriented until this Critical Injury is healed.
      </p>
    </div>
    <div
      class="c2"
      data-testid="criticalInjury-the_end_is_nigh"
    >
      <h4
        data-testid="criticalInjury-the_end_is_nigh-dice_value"
      >
        141-150
      </h4>
      <h4
        data-testid="criticalInjury-the_end_is_nigh-name"
      >
        The End Is Nigh
      </h4>
      <h4
        data-testid="criticalInjury-the_end_is_nigh-severity"
      >
        <span>
          k k k k
        </span>
      </h4>
      <p
        data-testid="criticalInjury-the_end_is_nigh-effects"
      >
        The target dies after the last Initiative slot during the next round unless this Critical Injury is healed.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/CriticalInjuriesSection editing 1`] = `
.c6 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-column-gap: 12px;
  grid-row-gap: 6px;
  padding: 12px;
}

.c6 > h4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c6 > h4:first-child {
  color: rgb(242,143,34);
}

.c6 > h4 span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(81,42,124);
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 p {
  grid-column: 1/4;
  color: rgb(0,130,155);
  text-align: justify;
}

.c6 button {
  grid-column: 1/4;
}

.c4 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-column-gap: 12px;
  grid-row-gap: 6px;
  padding: 12px;
}

.c4 > * {
  opacity: 0.5;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c4 > h4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c4 > h4:first-child {
  color: rgb(242,143,34);
}

.c4 > h4 span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(81,42,124);
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 p {
  grid-column: 1/4;
  color: rgb(0,130,155);
  text-align: justify;
  opacity: 0.5;
}

.c4 button {
  grid-column: 1/4;
}

.c5 {
  width: 100%;
  padding: 6px;
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  background: rgba(234,242,246,0.5);
  cursor: pointer;
  text-transform: uppercase;
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 > h4 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  margin: 0;
  text-align: center;
}

.c5:hover {
  background-color: rgb(0,130,155);
}

.c5:hover h4 {
  color: rgb(234,242,246);
}

.c5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c2:disabled {
  color: rgb(65,178,180);
  cursor: not-allowed;
}

.c0 {
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  background-color: rgba(65,178,180,0.1);
  padding: 12px;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 12px;
}

.c1 h3 {
  width: 100%;
  margin: 0;
  text-transform: uppercase;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 div > button {
  font-size: 25px;
  padding: 6px;
}

.c3 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c3 > form:not(:last-child) {
  margin-bottom: 12px;
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="criticalInjuries-section"
>
  <div
    class="c1"
  >
    <div
      data-testid="form-buttons-criticalInjury"
    >
      <button
        class="c2"
        data-testid="edit-criticalInjury"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      data-testid="criticalInjury-minor_nick"
    >
      <h4
        data-testid="criticalInjury-minor_nick-dice_value"
      >
        01-05
      </h4>
      <h4
        data-testid="criticalInjury-minor_nick-name"
      >
        Minor Nick
      </h4>
      <h4
        data-testid="criticalInjury-minor_nick-severity"
      >
        <span>
          k
        </span>
      </h4>
      <p
        data-testid="criticalInjury-minor_nick-effects"
      >
        The target suffers 1 strain.
      </p>
      <button
        class="c5"
        data-testid="undoButton-minor_nick"
        type="button"
      >
        <h4>
          Undo
        </h4>
      </button>
    </div>
    <div
      class="c6"
      data-testid="criticalInjury-slightly_dazed"
    >
      <h4
        data-testid="criticalInjury-slightly_dazed-dice_value"
      >
        61-65
      </h4>
      <h4
        data-testid="criticalInjury-slightly_dazed-name"
      >
        Slightly Dazed
      </h4>
      <h4
        data-testid="criticalInjury-slightly_dazed-severity"
      >
        <span>
          k k
        </span>
      </h4>
      <p
        data-testid="criticalInjury-slightly_dazed-effects"
      >
        The target is disoriented until this Critical Injury is healed.
      </p>
      <button
        class="c5"
        data-testid="healButton-slightly_dazed"
        type="button"
      >
        <h4>
          Heal
        </h4>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/CriticalInjuriesSection isCharacter 1`] = `
.c5 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-column-gap: 12px;
  grid-row-gap: 6px;
  padding: 12px;
}

.c5 > h4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c5 > h4:first-child {
  color: rgb(242,143,34);
}

.c5 > h4 span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(81,42,124);
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 p {
  grid-column: 1/4;
  color: rgb(0,130,155);
  text-align: justify;
}

.c5 button {
  grid-column: 1/4;
}

.c4 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-column-gap: 12px;
  grid-row-gap: 6px;
  padding: 12px;
}

.c4 > h4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c4 > h4:first-child {
  color: rgb(242,143,34);
}

.c4 > h4 span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(81,42,124);
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 p {
  grid-column: 1/4;
  color: rgb(0,130,155);
  text-align: justify;
  opacity: 0.5;
}

.c4 button {
  grid-column: 1/4;
}

.c2 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c2:disabled {
  color: rgb(65,178,180);
  cursor: not-allowed;
}

.c0 {
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  background-color: rgba(65,178,180,0.1);
  padding: 12px;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 12px;
}

.c1 h3 {
  width: 100%;
  margin: 0;
  text-transform: uppercase;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 div > button {
  font-size: 25px;
  padding: 6px;
}

.c3 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c3 > form:not(:last-child) {
  margin-bottom: 12px;
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="criticalInjuries-section"
>
  <div
    class="c1"
  >
    <div
      data-testid="form-buttons-criticalInjury"
    >
      <button
        class="c2"
        data-testid="edit-criticalInjury"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      data-testid="criticalInjury-minor_nick"
    >
      <h4
        data-testid="criticalInjury-minor_nick-dice_value"
      >
        01-05
      </h4>
      <h4
        data-testid="criticalInjury-minor_nick-name"
      >
        Minor Nick
      </h4>
      <h4
        data-testid="criticalInjury-minor_nick-severity"
      >
        <span>
          k
        </span>
      </h4>
      <p
        data-testid="criticalInjury-minor_nick-effects"
      >
        The target suffers 1 strain.
      </p>
    </div>
    <div
      class="c5"
      data-testid="criticalInjury-slightly_dazed"
    >
      <h4
        data-testid="criticalInjury-slightly_dazed-dice_value"
      >
        61-65
      </h4>
      <h4
        data-testid="criticalInjury-slightly_dazed-name"
      >
        Slightly Dazed
      </h4>
      <h4
        data-testid="criticalInjury-slightly_dazed-severity"
      >
        <span>
          k k
        </span>
      </h4>
      <p
        data-testid="criticalInjury-slightly_dazed-effects"
      >
        The target is disoriented until this Critical Injury is healed.
      </p>
    </div>
  </div>
</div>
`;
